# xrslam-noprimer

./: CMakeLists.txt
cmake/Modules/: FindGLOG.cmake  FindJson.cmake  FindSpdLog.cmake  FindXRPrimer.cmake  SuperBuildDepends.cmake
configs/: euroc.yaml
docs/: VIO系统详细说明.docx
xrslam/: CMakeLists.txt
xrslam-extra/: CMakeLists.txt
xrslam-extra/include/xrslam/extra/: opencv_image.h  yaml_config.h
xrslam-extra/src/xrslam/extra/: opencv_image.cpp
xrslam-ios/: CMakeLists.txt
xrslam-pc/lightvis/: CMakeLists.txt
xrslam-pc/lightvis/src/: lightvis.cpp
xrslam-pc/player/: CMakeLists.txt
xrslam-pc/player/src/: euroc_dataset_reader.cpp  euroc_dataset_reader.h  main.cpp  tum_dataset_reader.h
xrslam-test/test/: CMakeLists.txt
xrslam-test/test/src/: test_feature_track.cpp  test_main.cpp  test_se3_cost_function.cpp
xrslam-utils/: base64.h
xrslam/include/xrslam/: inspection.h  xrslam.h
xrslam/src/xrslam/: common.h  config.cpp  inspection.cpp  xrslam.cpp
xrslam/src/xrslam/core/: detail.cpp  detail.h  feature_tracker.cpp  feature_tracker.h  frontend_worker.cpp  frontend_worker.h  initializer.cpp  initializer.h  sliding_window_tracker.cpp  sliding_window_tracker.h
xrslam/src/xrslam/estimation/: preintegrator.cpp  solver.cpp  solver.h  state.h
xrslam/src/xrslam/estimation/ceres/: cost_function_validator.h  reprojection_factor.h
xrslam/src/xrslam/geometry/: essential.cpp  essential.h  homography.cpp  lie_algebra.cpp  lie_algebra.h  stereo.cpp  stereo.h  wahba.h
xrslam/src/xrslam/localizer/: base64.h  localizer.cpp  localizer.h
xrslam/src/xrslam/map/: frame.cpp  frame.h  map.cpp  map.h  track.cpp  track.h
xrslam/src/xrslam/utility/: debug.cpp  identifiable.h  logger.h  random.h  ransac.h  tag.h  unique_timer.h  worker.cpp  worker.h
